income,expense,budget controller

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.application.name=PFMS
-spring.datasource.url=jdbc:mysql//localhost:3306/pfms
+spring.datasource.url=jdbc:mysql://localhost:3306/pfms
 spring.datasource.username=root
 spring.datasource.password=Rodrigo@123
+
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql = true
+spring.jpa.show-sql=true
